--- a/style/main.css
+++ b/style/main.css
@@ -58,7 +58,7 @@ header nav a:hover{
 
 .filme-principal .descricao{
     margin-top: 15px;
-    margin-bottom: 40px;
+    margin-bottom: 40px;    
 }
 
 .filme-principal .titulo{
@@ -86,4 +86,12 @@ header nav a:hover{
 
 .botao i{
     margin-right: 8px;
+}
+
+.container{
+    margin-left: 20px;    
+}
+
+.filme-principal .container{
+    width: 60%;
 }
