--- a/style/main.css
+++ b/style/main.css
@@ -13,8 +13,9 @@
 
 body{
     background: var(--preta);
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Arial';
     color: white;
+    text-align: justify;
 }
 
 
@@ -58,14 +59,14 @@ header nav a:hover{
 
 .filme-principal .descricao{
     margin-top: 15px;
-    margin-bottom: 40px;    
+    margin-bottom: 40px;  
+    margin-right: 15px;  
 }
 
 .filme-principal .titulo{
     margin-top: 5%;
     font-size: 40px;
     font-family: 'Trebuchet MS', Arial, sans-serif;
-
 }
 
 .botoes{
@@ -104,4 +105,8 @@ header nav a:hover{
     height: 100%;
     width: 100%;
     display: block;
+}
+
+.carrosel-filmes{
+    margin-top: 10px;
 }
